# ChromaTerm

./: .gitignore  .pyrightconfig.json  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  setup.py
chromaterm/: __init__.py  __version__.py  cli.py  core.py  default_config.py  pcre.py
chromaterm/tests/: test_pcre.py
