[project]
name = "chromaterm2"
dynamic = ["version"]
description = "Color your Terminal with Regex! (Maintained fork of ChromaTerm)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "rgcr", email = "roger.dev@pm.me"},
]
maintainers = [
    {name = "rgcr", email = "roger.dev@pm.me"},
]
# Original author: hSaria (sariahajjar@gmail.com)
keywords = ["terminal", "color", "regex", "highlighting", "cli"]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators", 
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "psutil",
    "pyyaml>=5.1",
]

[project.urls]
Homepage = "https://github.com/rgcr/ChromaTerm2"
Repository = "https://github.com/rgcr/ChromaTerm2.git"
Issues = "https://github.com/rgcr/ChromaTerm2/issues"
Changelog = "https://github.com/rgcr/ChromaTerm2/blob/main/CHANGELOG.md"

[project.scripts]
ct = "chromaterm.cli:main"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "pytest>=8.4.1",
    "twine>=6.1.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "chromaterm.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["chromaterm*"]
